Added Google Fonts and basic styling.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo&family=Roboto:wght@500&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -79,6 +81,7 @@ font-size: 1.1rem;
 
 .answersbutton {
   border-radius: 10px;
+  font-size: 1.1rem;
 }
 
 .selectdropdown {
@@ -95,6 +98,8 @@ font-size: 1.1rem;
   background-color: #D6D6CC;
   padding: 3rem 0;
   text-align: center;
+  font-family: 'Exo', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .navbar a {
